RESOLVED FIXED127507
Don't enable speculative tiles immediately after main load stops progressing
https://bugs.webkit.org/show_bug.cgi?id=127507
Summary Don't enable speculative tiles immediately after main load stops progressing
Antti Koivisto
Reported 2014-01-23 13:24:55 PST
It is common for timers and events trigger more loading after the initial main frame loading has completed. We should delay a bit before enabling speculative tiles and keep them disabled if loading still continues.
Attachments
patch (7.71 KB, patch)
2014-01-23 13:32 PST, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2014-01-23 13:32:53 PST
WebKit Commit Bot
Comment 2 2014-01-23 13:34:53 PST
Attachment 222023 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderLayerBacking.cpp:222: Extra space for operator ! [whitespace/operators] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2014-01-23 13:59:18 PST
Note You need to log in before you can comment on or make changes to this bug.